--- a/templates/tournoi/new.html.twig
+++ b/templates/tournoi/new.html.twig
@@ -3,6 +3,7 @@
 {% endblock %}
 
 {% block body %}
+    <h1 class="title-create-tr">Organiser un tournoi</h1>
 {{ include("tournoi/_form.html.twig") }}
 {% endblock %}
 
