--- a/public/css/style.css
+++ b/public/css/style.css
@@ -49,6 +49,9 @@ header {
   white-space: nowrap;
   text-overflow: ellipsis;
   width: 50%;
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
 
 .nb-matchs {
@@ -954,3 +957,66 @@ button:disabled {
   text-transform: uppercase;
   font-size: 16px;
 }
+
+.create-match {
+  color: rgba(255, 255, 255, 0.5);
+  font-size: 12px;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
+footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 132px;
+  background-color:#282828;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
+
+/* ADD FLASH MESSAGES */
+
+/* Base 1 */
+#content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 10px;
+  margin-top: 1px;
+}
+
+/* Base 2 */
+#addflash-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 10px;
+  margin-top: 1px;
+}
+
+.alert-success {
+  border-radius: 5px;
+  color:#4061f3;
+  padding: 10px;
+  background-color: #2c31471f;
+  border: 1px solid #4061f3;
+}
+
+.alert-danger {
+  border-radius: 5px;
+  color:#FF3F3F;
+  padding: 10px;
+  background-color: #2c31471f;
+  border: 1px solid #FF3F3F;
+}
+
+
