--- a/templates/tournoi/edit.html.twig
+++ b/templates/tournoi/edit.html.twig
@@ -1,8 +1,12 @@
-{% extends 'base.html.twig' %}
+{% extends 'base2.html.twig' %}
 {% block title %}Edition du tournoi {{ tournoi.nomTournoi }}{% endblock %}
 
 {% block body %}
-    <h1>Edition du tournoi {{ tournoi.nomTournoi }}</h1>
+    <h1 class="title-edit-tr">Edition du tournoi {{ tournoi.nomTournoi }}</h1>
     {{ include('tournoi/_form.html.twig', {'button_label': 'Valider'}) }}
-    {{ include('tournoi/_delete_form.html.twig') }}
+    {# {{ include('tournoi/_delete_form.html.twig') }} #}
+{% endblock %}
+{% block javascripts %}
+<script src="{{ asset('js/tinymce/tinymce.min.js') }}"></script>
+<script src="{{ asset('js/tinymce.js') }}"></script>
 {% endblock %}
