--- a/public/css/style.css
+++ b/public/css/style.css
@@ -991,6 +991,9 @@ footer {
   flex-direction: column;
   gap: 10px;
   margin-top: 1px;
+  z-index: 100;
+  position: absolute;
+  top: 10px;
 }
 
 /* Base 2 */
@@ -1001,7 +1004,11 @@ footer {
   flex-direction: column;
   gap: 10px;
   margin-top: 1px;
+  z-index: 100;
+  position: absolute;
+  top: 10px;
 }
+
 
 .alert-success {
   border-radius: 5px;
