--- a/templates/search_user/index.html.twig
+++ b/templates/search_user/index.html.twig
@@ -2,6 +2,11 @@
 
 {% block title %}Rechercher les utilisateurs{% endblock %}
 
+{% block stylesheets %}
+    {{ parent() }}
+    <link rel="stylesheet" href="{{ asset('css/profil.css') }}">
+{% endblock %}
+
 {% block body %}
 
     <h1>Rechercher les utilisateurs</h1>
@@ -74,7 +79,6 @@
 
             {% endfor %}
         {% else %}
-            <p>Aucun utilisateur trouvé</p>
         {% endif %}
 {% endblock %}
 
