--- a/public/css/style.css
+++ b/public/css/style.css
@@ -196,6 +196,7 @@ details>summary i {
   flex-wrap: wrap;
   text-align: center;
   gap: 10px;
+  border-top: 1px solid rgba(255, 255, 255, 0.2);
 }
 
 .jeux-liste li {
@@ -449,6 +450,7 @@ details summary::-webkit-details-marker {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+  padding-bottom: 120px;
 }
 
 .tr-region p {
@@ -712,23 +714,6 @@ button:disabled {
   display: none;
 }
 
-
-@media (min-width: 768px) {
-  #sidebar {
-    width: 25%;
-    background-color: #2c3147;
-    height: 100vh;
-    position: sticky;
-    top: 0;
-    left: 0;
-    overflow-x: auto;
-    overflow-y: auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-  }
-}
-
 .nav-item-active {
   background-color: #202430;
   color: white !important;
@@ -969,14 +954,15 @@ button:disabled {
 }
 
 footer {
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 132px;
+  height: 120px;
   background-color:#282828;
   display: flex;
-  justify-content: center;
-  align-items: center;
   gap: 10px;
 }
 
@@ -1009,7 +995,6 @@ footer {
   top: 10px;
 }
 
-
 .alert-success {
   border-radius: 5px;
   color:#4061f3;
@@ -1026,4 +1011,149 @@ footer {
   border: 1px solid #FF3F3F;
 }
 
+.user-utilities {
 
+
+}
+
+.user-utilities a {
+  color: white;
+}
+
+.user-utilities a:hover {
+  text-decoration: underline;
+  color: white;
+}
+
+/* Resposive Version Desktop */
+
+@media (min-width: 768px) {
+  #sidebar {
+    width: 300px;
+    background-color: #2c3147;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+  }
+
+  .main-home {
+    margin-left: 300px;
+  }
+
+  .jeux-liste {
+    display: flex;
+    flex-wrap: wrap;
+    text-align: center;
+    gap: 10px;
+  }
+
+  .jeux-liste li {
+    width: 10%;
+  }
+
+  footer {
+    height: 120px;
+    width: calc(100% - 300px);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .banner-theme {
+    height: 350px;
+  }
+
+  .banner-theme-txt p {
+    display: block;
+    width: 500px;
+    font-size: 18px;
+  }
+
+  .fa-solid.fa-bars {
+    display: none;
+  }
+
+  .fa-solid.fa-xmark {
+    display: none;
+  }
+
+  .mobile-header {
+    display: none;
+  }
+
+  .main-content {
+    padding: 50px;
+    padding-left: 355px;
+  }
+
+  #main-container .tr-join-status {
+    position: fixed;
+    /* z-index: 1; */
+    top: 0;
+    /* width: calc(100% - 300px); */
+    right: 0;
+    display: flex;
+    /* justify-content: center;
+    align-items: center; */
+    flex-direction: column;
+    width: 200px;
+    border-left: 1px solid rgba(255, 255, 255, 0.2);
+  }
+
+  #regles {
+        width: calc(100% - 200px);
+  }
+
+  .banner-tr {
+    width: 100%;
+    height: 400px;
+  }
+
+  .content {
+    width: calc(100% - 200px);
+  }
+
+  .participant-container {
+    width: calc(100% - 200px);
+    min-width: 100%;
+  }
+
+  .tab-bar {
+    display: flex;
+    justify-content: center;
+    width: calc(100% - 200px);
+  }
+
+  #wrapper {
+    padding-bottom: 0;
+  }
+
+  .title-organisation {
+    width: calc(100% - 200px);
+  }
+
+  .head-trd {
+    width: calc(100% - 200px);
+  }
+
+  /* .fa-regular, .far {
+    display: none;
+  } */
+
+  .btn-join-tr {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .participant-container {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+  }
+
+  .fa-circle-up {
+    display: none;
+  }
+}
