--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1100,6 +1100,7 @@ footer {
     flex-direction: column;
     width: 200px;
     border-left: 1px solid rgba(255, 255, 255, 0.2);
+    border-top: none;
   }
 
   #regles {
@@ -1108,7 +1109,7 @@ footer {
 
   .banner-tr {
     width: 100%;
-    height: 400px;
+    height: auto;
   }
 
   .content {
@@ -1155,5 +1156,32 @@ footer {
 
   .fa-circle-up {
     display: none;
+  }
+
+  .tournament-item {
+    width: 350px;
+  }
+
+  .jeux-liste li img {
+    width: 100px !important;
+    height: 100px !important;
+  }
+
+  .tournoi-img {
+    height: 175px;
+  }
+
+
+}
+
+@media (min-width: 1200px ) {
+  .participant-container {
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+  }
+
+  .tournois-list {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
   }
 }
