--- a/templates/chat/index.html.twig
+++ b/templates/chat/index.html.twig
@@ -50,19 +50,25 @@
         </div>
     </div>
     <div class="message-container">
-        {# Div qu'on rempli de messages a chaque envoie de message #}
-        <div id="messages"></div>
-        {# Formulaire d'envoie de message #}
-        <div class="message-form">
-            <form class="hide-form" id="send-message-form">
-                <textarea type="text" id="message-text" placeholder="Écrivez un message..."></textarea>
-                <button class="btn-send" type="submit">
-                    <span class="material-symbols-outlined">
-                        send
-                    </span>
-                </button>
-            </form>
-        </div>
+        {# {% if roomId is not null %} #}
+            {# Div qu'on rempli de messages a chaque envoie de message #}
+            <div id="messages"></div>
+            {# Formulaire d'envoie de message #}
+            <div class="message-form">
+                <form class="hide-form" id="send-message-form">
+                    <textarea type="text" id="message-text" placeholder="Écrivez un message..." maxlength="50000"></textarea>
+                    <button class="btn-send" type="submit">
+                        <span class="material-symbols-outlined">
+                            send
+                        </span>
+                    </button>
+                </form>
+            </div>
+        {# {% else %} #}
+            {# <div class="no-room">
+                <p>Choisissez une conversation pour commencer à discuter</p>
+            </div> #}
+        {# {% endif %} #}
     </div>
 </div>
 {% endblock %}
