--- a/public/css/style.css
+++ b/public/css/style.css
@@ -293,6 +293,7 @@ details summary::-webkit-details-marker {
 
 .profilPic-cr {
   width: 80px;
+  height: 80px;
   border-radius: 50%;
 }
 
@@ -818,7 +819,7 @@ button:disabled {
   padding-bottom: 132px;
 }
 
-#base2-wrapper{
+#base2-wrapper {
   height: 100vh;
   display: flex;
   flex-direction: column;
@@ -877,6 +878,7 @@ button:disabled {
   color: rgba(255, 255, 255, 0.5);
   font-weight: 500;
 }
+
 .member-pseudo {
   width: 100%;
   text-align: center;
@@ -961,7 +963,7 @@ footer {
   bottom: 0;
   width: 100%;
   height: 120px;
-  background-color:#282828;
+  background-color: #282828;
   display: flex;
   gap: 10px;
 }
@@ -997,7 +999,7 @@ footer {
 
 .alert-success {
   border-radius: 5px;
-  color:#4061f3;
+  color: #4061f3;
   padding: 10px;
   background-color: #2c31471f;
   border: 1px solid #4061f3;
@@ -1005,16 +1007,13 @@ footer {
 
 .alert-danger {
   border-radius: 5px;
-  color:#FF3F3F;
+  color: #FF3F3F;
   padding: 10px;
   background-color: #2c31471f;
   border: 1px solid #FF3F3F;
 }
 
-.user-utilities {
-
-
-}
+.user-utilities {}
 
 .user-utilities a {
   color: white;
@@ -1023,6 +1022,12 @@ footer {
 .user-utilities a:hover {
   text-decoration: underline;
   color: white;
+}
+
+.profil-menu a img {
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
 }
 
 /* Resposive Version Desktop */
@@ -1104,7 +1109,7 @@ footer {
   }
 
   #regles {
-        width: calc(100% - 200px);
+    width: calc(100% - 200px);
   }
 
   .banner-tr {
@@ -1158,9 +1163,9 @@ footer {
     display: none;
   }
 
-  .tournament-item {
+  /* .tournament-item {
     width: 350px;
-  }
+  } */
 
   .jeux-liste li img {
     width: 100px !important;
@@ -1172,9 +1177,10 @@ footer {
   }
 
 
+
 }
 
-@media (min-width: 1200px ) {
+@media (min-width: 1200px) {
   .participant-container {
     display: grid;
     grid-template-columns: repeat(8, 1fr);
@@ -1182,6 +1188,6 @@ footer {
 
   .tournois-list {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(3, 1fr);
   }
 }
