--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -45,7 +45,7 @@
 				<div class="btn-register">
 					<button type="submit" class="btn">START</button>
 					<p>Déjà un compte ?
-						<a href="{{ path('app_login') }}">Connectez-vous.</a>
+						<a href="{{ path('app_login') }}">Connectez-vous</a>
 					</p>
 				</div>
 				{{ form_end(registrationForm) }}
