--- a/templates/search_user/index.html.twig
+++ b/templates/search_user/index.html.twig
@@ -8,8 +8,7 @@
 {% endblock %}
 
 {% block body %}
-
-    <h1>Rechercher les utilisateurs</h1>
+    <h1>Rechercher un utilisateur</h1>
 
     <form action="{{ path('app_search_user') }}" method="get">
         <input type="text" name="search" id="search" placeholder="Rechercher un utilisateur">
@@ -34,11 +33,8 @@
                             </div>
                         </a>
                     </div>
-
                     
                     {% if app.user %}
-                        
-                    
                         <div class="action-btn">
                             {% if equipes is not empty %}
                                 
@@ -76,7 +72,6 @@
                         <div><a href="#" id="follow-user" data-user-id={{user.id}}>Follow</a></div>
                     </div> #}
                </div>
-
             {% endfor %}
         {% else %}
         {% endif %}
