Ajout de meta descriptions et commenter le code

--- a/templates/equipe/new.html.twig
+++ b/templates/equipe/new.html.twig
@@ -1,5 +1,9 @@
 {% extends 'base2.html.twig' %}
 
+{% block meta %}
+	<meta name="description" content="Créer une équipe">
+{% endblock %}
+
 {% block title %}Créer une équipe
 {% endblock %}
 {% block stylesheets %}
