--- a/templates/notification/index.html.twig
+++ b/templates/notification/index.html.twig
@@ -1,5 +1,9 @@
 {% extends 'base.html.twig' %}
 
+{% block meta %}
+    <meta name="description" content="Vos notifications">
+{% endblock %}
+
 {% block title %}Vos notifications{% endblock %}
 {% block sidebar %}
 	{{ include ('include/profil_sidebar.html.twig') }}
