--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -2,6 +2,9 @@
 
 {% block title %}VictoryForge | Inscription
 {% endblock %}
+{% block meta %}
+	<meta name="description" content="Inscription">
+{% endblock %}
 
 {% block stylesheets %}
 	{{ parent() }}
