--- a/templates/search_user/index.html.twig
+++ b/templates/search_user/index.html.twig
@@ -1,5 +1,9 @@
 {% extends 'base2.html.twig' %}
 
+{% block meta %}
+    <meta name="description" content="Rechercher les utilisateurs">
+{% endblock %}
+
 {% block title %}Rechercher les utilisateurs{% endblock %}
 
 {% block stylesheets %}
