--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base2.html.twig' %}
 {% block meta %}
-	<meta name="description" content="Enregistrez-vous pour défiez les meilleurs" />
+	<meta name="description" content="Connexion" />
 {% endblock %}
 {% block title %}Se connecter
 {% endblock %}
