--- a/templates/tournoi/edit.html.twig
+++ b/templates/tournoi/edit.html.twig
@@ -1,4 +1,9 @@
 {% extends 'base2.html.twig' %}
+
+{% block meta %}
+    <meta name="description" content="Edition du tournoi">
+{% endblock %}
+
 {% block title %}Edition du tournoi {{ tournoi.nomTournoi }}{% endblock %}
 
 {% block body %}
