--- a/templates/tournoi/new.html.twig
+++ b/templates/tournoi/new.html.twig
@@ -1,4 +1,9 @@
 {% extends 'base2.html.twig' %}
+
+{% block meta %}
+    <meta name="description" content="Organiser un tournoi.">
+{% endblock %}
+
 {% block title %}Organiser un tournoi
 {% endblock %}
 
