--- a/templates/tournoi/_delete_form.html.twig
+++ b/templates/tournoi/_delete_form.html.twig
@@ -1,3 +1,7 @@
+{% block meta %}
+    <meta name="description" content="Supprimer un tournoi">
+{% endblock %}
+
 {% if app.user and app.user.id == tournoi.organisateur.id %}
     <form method="post" action="{{ path('app_tournoi_delete', {'id': tournoi.id}) }}" onsubmit="return confirm('Etes-vous sûr de vouloir supprimer?');">
         <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ tournoi.id) }}">
