--- a/templates/tournoi/_form.html.twig
+++ b/templates/tournoi/_form.html.twig
@@ -1,3 +1,7 @@
+{% block meta %}
+    <meta name="description" content="Organiser un tournoi sur VictoryForge.">
+{% endblock %}
+
 {% block stylesheets %}
 <link rel="stylesheet" href="{{ asset('css/security.css') }}">
 {% endblock %}
