Fonction pour rendre le formulaire dans la vue paramètres du compte

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,4 +1,9 @@
 {% extends 'base.html.twig' %}
+
+{% block meta %}
+<meta name="description" content="VictoryForge est une plateforme de tournois en ligne pour les joueurs passionnés de jeux vidéo.">
+{% endblock %}
+
 {% block title %}
 VictoryForge | Tournois en ligne
 {% endblock %}
