--- a/templates/search_user/index.html.twig
+++ b/templates/search_user/index.html.twig
@@ -8,6 +8,7 @@
 
 {% block stylesheets %}
 {{ parent() }}
+<link rel="stylesheet" href="{{ asset('css/security.css') }}">
 <link rel="stylesheet" href="{{ asset('css/profil.css') }}">
 {% endblock %}
 
